--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -30,6 +30,7 @@
     "style": "样式",
     "namespace": "名空间",
     "template": "模板",
+    "expression": "指令表达式",
     "scope": "作用域",
     "router": "路由",
     "structure": "结构",
@@ -40,12 +41,10 @@
     "next": "下一页",
     "previous": "上一页",
     "period": "。",
-    "try": "亲自试一试：",
-    "run": "运行",
-    "reset": "重置",
-    "view": "查看执行结果：",
+    "meta": "元指令",
     "rootScope": "根作用域",
-    "directive.decorator": "指令/修饰符",
+    "directive.decorator": "指令/指令修饰符",
+    "directive.expression": "指令/指令表达式",
     "directive.raw": "指令/@raw",
     "directive.raw.sections": [{
         "question": "@raw指令的作用效果",
@@ -75,6 +74,7 @@
     "directive.general": "指令/一般指令",
     "directive.watch": "指令/$watch",
     "directive.eventHandler": "指令/事件处理指令",
+    "directive.meta": "指令/元指令",
     "module.introduction": "模块/介绍",
     "module.introduction.sections": [{
         "question": "什么是模块",
