--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -13,8 +13,9 @@
     "introduction": "介绍",
     "string": "字符串",
     "directive": "指令",
+    "directive.dynamic": "指令/@directive",
     "directive.introduction": "指令/介绍",
-    "directive.lifeCycle": "指令/生命周期",
+    "directive.lifeCycle": "指令/生命周期指令",
     "directive.scope": "指令/作用域",
     "directive.loading": "指令/+loading",
     "lifeCycle": "生命周期指令",
