--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -8,7 +8,7 @@
     "overview": "概览",
     "overview.install": "概览/安装",
     "overview.application": "概览/应用程序",
-    "install": "安装",
+    "installation": "安装",
     "introduction": "介绍",
     "string": "字符串",
     "directive": "指令",
