--- a/languages/en-us.json
+++ b/languages/en-us.json
@@ -3,8 +3,77 @@
         "enUS": "English",
         "zhCN": "中文（简体）"
     },
+    "application": "Application",
     "viewOnGithub": "view on Github",
+    "overview": "Overview",
+    "overview.introduction": "Overview / Introduction",
+    "overview.installation": "Overview / Installation",
+    "overview.application": "Overview / Application",
+    "installation": "Installation",
+    "introduction": "Introduction",
+    "string": "String",
+    "directive": "Directive",
+    "directive.dynamic": "Directive / @directive",
+    "directive.introduction": "Directive / Introduction",
+    "directive.lifeCycle": "Directive / LifeCycle Directives",
+    "directive.scope": "Directive / Scope",
+    "directive.load": "Directive / +load",
+    "lifeCycle": "LifeCycle Directives",
+    "eventHandler": "EventHandler",
     "index": "Index",
+    "decorator": "Decorator",
+    "controller": "Control Directives",
+    "general": "General Directive",
+    "boolean": "Boolean Directive",
+    "module": "Module",
+    "script": "Script",
+    "style": "Style",
+    "namespace": "Namespace",
+    "view": "View",
+    "expression": "Expression",
+    "scope": "Scope",
+    "router": "Router",
+    "structure": "Structure",
+    "miscellaneous": "Miscellaneous",
+    "options": "Options",
+    "others": "Others",
     "next": "Next",
-    "previous": "Prev"
+    "previous": "Prev",
+    "meta": "Meta Directives",
+    "directive.decorator": "Directive / Decorators",
+    "directive.expression": "Directive / Expression",
+    "directive.raw": "Directive / @raw",
+    "directive.loaded": "Directive / +loaded",
+    "directive.unload": "Directive / +unload",
+    "directive.unloaded": "Directive / +unloaded",
+    "directive.sentry": "Directive / +sentry",
+    "directive.controller": "Directive / Control Directives",
+    "directive.checked": "Directive / *checked",
+    "directive.class": "Directive / *class",
+    "directive.each": "Directive / *each",
+    "directive.exist": "Directive / *exist",
+    "directive.file": "Directive / *file",
+    "directive.focus": "Directive / *focus",
+    "directive.html": "Directive / *html",
+    "directive.result": "Directive / *result",
+    "directive.selected": "Directive / *selected",
+    "directive.style": "Directive / *style",
+    "directive.text": "Directive / *text",
+    "directive.value": "Directive / *value",
+    "directive.boolean": "Directive / Boolean Directive",
+    "directive.general": "Directive / General Directive",
+    "directive.watch": "Directive / *watch",
+    "directive.eventHandler": "Directive / EventHandler Directives",
+    "directive.meta": "Directive / Meta Directives",
+    "module.introduction": "Module / Introduction",
+    "module.view": "Module / View",
+    "module.style": "Module/ Style",
+    "module.script": "Module / Script",
+    "module.string": "Module / String",
+    "module.json": "Module / json",
+    "module.namespace": "Module / Namespace",
+    "router.introduction": "Router / Introduction",
+    "miscellaneous.options": "Miscellaneous / Options",
+    "miscellaneous.api": "Miscellaneous / API",
+    "miscellaneous.others": "Miscellaneous / Others"
 }
