--- a/languages/zh-cn.json
+++ b/languages/zh-cn.json
@@ -6,22 +6,22 @@
     "application": "应用程序",
     "viewOnGithub": "在Github上查看",
     "overview": "概览",
-    "overview.install": "概览/安装",
-    "overview.application": "概览/应用程序",
+    "overview.introduction": "概览 / 介绍",
+    "overview.installation": "概览 / 安装",
+    "overview.application": "概览 / 应用程序",
     "installation": "安装",
     "introduction": "介绍",
     "string": "字符串",
     "directive": "指令",
-    "directive.dynamic": "指令/@directive",
-    "directive.introduction": "指令/介绍",
-    "directive.lifeCycle": "指令/生命周期指令",
-    "directive.scope": "指令/作用域",
-    "directive.load": "指令/+load",
+    "directive.dynamic": "指令 / @directive",
+    "directive.introduction": "指令 / 介绍",
+    "directive.lifeCycle": "指令 / 生命周期指令",
+    "directive.scope": "指令 / 作用域",
+    "directive.load": "指令 / +load",
     "lifeCycle": "生命周期指令",
     "eventHandler": "事件处理指令",
     "index": "目录",
     "decorator": "指令修饰符",
-    "decorators": "指令修饰符：",
     "controller": "控制指令",
     "general": "一般指令",
     "boolean": "布尔指令",
@@ -37,11 +37,43 @@
     "miscellaneous": "杂项",
     "options": "选项",
     "others": "其他",
-    "configs": "配置",
-    "validator": "验证器",
-    "version": "版本信息",
     "next": "下一页",
     "previous": "上一页",
-    "period": "。",
-    "meta": "元指令"
+    "meta": "元指令",
+    "directive.decorator": "指令 / 指令修饰符",
+    "directive.expression": "指令 / 指令表达式",
+    "directive.raw": "指令 / @raw",
+    "directive.loaded": "指令 / +loaded",
+    "directive.unload": "指令 / +unload",
+    "directive.unloaded": "指令 / +unloaded",
+    "directive.sentry": "指令 / +sentry",
+    "directive.controller": "指令 / 控制指令",
+    "directive.checked": "指令 / *checked",
+    "directive.class": "指令 / *class",
+    "directive.each": "指令 / *each",
+    "directive.exist": "指令 / *exist",
+    "directive.file": "指令 / *file",
+    "directive.focus": "指令 / *focus",
+    "directive.html": "指令 / *html",
+    "directive.result": "指令 / *result",
+    "directive.selected": "指令 / *selected",
+    "directive.style": "指令 / *style",
+    "directive.text": "指令 / *text",
+    "directive.value": "指令 / *value",
+    "directive.boolean": "指令 / 布尔指令",
+    "directive.general": "指令 / 一般指令",
+    "directive.watch": "指令 / *watch",
+    "directive.eventHandler": "指令 / 事件处理指令",
+    "directive.meta": "指令 / 元指令",
+    "module.introduction": "模块 / 介绍",
+    "module.view": "模块 / 视图",
+    "module.style": "模块/ 样式",
+    "module.script": "模块 / 脚本",
+    "module.string": "模块 / 字符串",
+    "module.json": "模块 / json",
+    "module.namespace": "模块 / 名空间",
+    "router.introduction": "路由 / 介绍",
+    "miscellaneous.options": "杂项 / 选项",
+    "miscellaneous.api": "杂项 / API",
+    "miscellaneous.others": "杂项 / 其他"
 }
